--- a/Airport.WebApi/ClientLight/Views/CustomerDetailPage.xaml
+++ b/Airport.WebApi/ClientLight/Views/CustomerDetailPage.xaml
@@ -1,10 +1,10 @@
-﻿<Page
-    x:Class="ClientLight.Views.PilotDetailPage"
+<Page
+    x:Class="ClientLight.Views.CustomerDetailPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"    
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    DataContext="{Binding PilotDetailViewModel, Source={StaticResource Locator}}"
+    DataContext="{Binding CustomerDetailViewModel, Source={StaticResource Locator}}"
     xmlns:ic="using:Microsoft.Xaml.Interactions.Core"
     xmlns:i="using:Microsoft.Xaml.Interactivity"
     xmlns:views="using:ClientLight.Views"
@@ -15,15 +15,15 @@
         Background="{ThemeResource SystemControlBackgroundAltHighBrush}"
         Margin="12,0,12,0">
 
-        <views:PilotDetailControl
-            MasterMenuItem="{Binding Item}"/>
+        <views:CustomerDetailControl
+            MasterMenuItem="{x:Bind ViewModel.Item}"/>
 
         <!--  Adaptive triggers  -->
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup x:Name="WindowStates">
                 <i:Interaction.Behaviors>
                     <ic:EventTriggerBehavior EventName="CurrentStateChanged">
-                        <ic:InvokeCommandAction Command="{Binding StateChangedCommand}"/>
+                        <ic:InvokeCommandAction Command="{x:Bind ViewModel.StateChangedCommand}"/>
                     </ic:EventTriggerBehavior>
                 </i:Interaction.Behaviors>
                 <VisualState x:Name="WideState">
