--- a/Airport.WebApi/ClientLight/Views/CustomerPage.xaml
+++ b/Airport.WebApi/ClientLight/Views/CustomerPage.xaml
@@ -1,35 +1,34 @@
-﻿<Page
-    x:Class="ClientLight.Views.PilotsPage"
+<Page
+    x:Class="ClientLight.Views.CustomerPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    DataContext="{Binding CustomerViewModel, Source={StaticResource Locator}}"
     xmlns:model="using:ClientLight.Model"
     xmlns:views="using:ClientLight.Views"
-    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
-    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
-    DataContext="{Binding PilotsViewModel, Source={StaticResource Locator}}"
+    xmlns:ic="using:Microsoft.Xaml.Interactions.Core"
+    xmlns:i="using:Microsoft.Xaml.Interactivity"
     mc:Ignorable="d">
-
     <Page.Transitions>
         <TransitionCollection>
             <NavigationThemeTransition />
         </TransitionCollection>
     </Page.Transitions>
     <Page.Resources>
-        <DataTemplate x:Key="MasterListViewItemTemplate" x:DataType="model:PilotDto">
+        <DataTemplate x:Key="MasterListViewItemTemplate" x:DataType="model:Customer">
             <Grid Margin="12,12,12,12">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
                 <TextBlock 
-                    Text="{x:Bind Name}" 
+                    Text="{x:Bind CompanyName}" 
                     FontSize="16" FontWeight="SemiBold" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
                 <TextBlock
                     Grid.Row="1"
                     Opacity="0.6"
-                    Text="{x:Bind FamilyName}"
+                    Text="{x:Bind ContactName}"
                     FontSize="16" FontWeight="Normal" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
             </Grid>
         </DataTemplate>
@@ -67,7 +66,6 @@
             </Grid.RowDefinitions>
             <TextBlock
                 x:Name="Title"
-                Text="{Binding Title, Mode=OneWay}"
                 x:Uid="CustomerPage_Title"
                 FontSize="28" FontWeight="SemiLight" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap" VerticalAlignment="Center"
                 Margin="0,0,12,7"/>
@@ -75,7 +73,7 @@
             <!--The SystemControlPageBackgroundChromeLowBrush background represents where you should place your master content.-->
             <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="0,4">
                 <Button Width="48" Height="48" BorderThickness="0" Background="Transparent" 
-                        Command="{Binding AddCustomerCommand}">
+                        Command="{x:Bind ViewModel.AddCustomerCommand}">
                     <Grid>
                         <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE77b;" FontSize="16"/>
                         <Grid Background="White" Margin="16,16,0,0" Width="8" Height="8">
@@ -84,7 +82,7 @@
                     </Grid>
                 </Button>
                 <Button Width="48" Height="48" BorderThickness="0" Background="Transparent" 
-                        Command="{Binding DeleteCustomerCommand}">
+                        Command="{x:Bind ViewModel.DeleteCustomerCommand}">
                     <Grid>
                         <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE77b;" FontSize="16"/>
                         <Grid Background="White" Margin="16,16,0,0" Width="8" Height="8">
@@ -93,7 +91,7 @@
                     </Grid>
                 </Button>
                 <Button Width="48" Height="48" BorderThickness="0" Background="Transparent" 
-                        Command="{Binding UpdateCustomerCommand}">
+                        Command="{x:Bind ViewModel.SaveCustomersCommand}">
                     <Grid>
                         <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE77b;" FontSize="16"/>
                         <Grid Background="White" Margin="16,16,0,0" Width="8" Height="8">
@@ -105,17 +103,17 @@
             <ListView
                 x:Name="MasterListView"
                 Grid.Row="2"
-                ItemsSource="{Binding Customers, Mode=OneWay}"
-                SelectedItem="{Binding Selected, Mode=OneWay}"
+                ItemsSource="{x:Bind ViewModel.Customers, Mode=OneWay}"
+                SelectedItem="{x:Bind ViewModel.Selected, Mode=OneWay}"
                 ItemContainerTransitions="{x:Null}"
                 ItemTemplate="{StaticResource MasterListViewItemTemplate}"
                 IsItemClickEnabled="True"
                 Background="{ThemeResource SystemControlPageBackgroundChromeLowBrush}">
-                <interactivity:Interaction.Behaviors>
-                    <core:EventTriggerBehavior EventName="ItemClick">
-                        <core:InvokeCommandAction Command="{Binding ItemClickCommand}" />
-                    </core:EventTriggerBehavior>
-                </interactivity:Interaction.Behaviors>
+                <i:Interaction.Behaviors>
+                    <ic:EventTriggerBehavior EventName="ItemClick">
+                        <ic:InvokeCommandAction Command="{x:Bind ViewModel.ItemClickCommand}" />
+                    </ic:EventTriggerBehavior>
+                </i:Interaction.Behaviors>
                 <ListView.ItemContainerStyle>
                     <Style TargetType="ListViewItem">
                         <Setter Property="HorizontalContentAlignment" Value="Stretch" />
@@ -131,19 +129,19 @@
             Grid.Column="1"
             Padding="24,0,0,0">
 
-            <views:PilotDetailControl
+            <views:CustomerDetailControl
                 x:Name="DetailControl"
-                MasterMenuItem="{Binding Selected, Mode=OneWay}"/>
+                MasterMenuItem="{x:Bind ViewModel.Selected, Mode=OneWay}"/>
         </Grid>
 
         <!--  Adaptive triggers  -->
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup x:Name="WindowStates">
-                <interactivity:Interaction.Behaviors>
-                    <core:EventTriggerBehavior EventName="CurrentStateChanged">
-                        <core:InvokeCommandAction Command="{Binding StateChangedCommand}"/>
-                    </core:EventTriggerBehavior>
-                </interactivity:Interaction.Behaviors>
+                <i:Interaction.Behaviors>
+                    <ic:EventTriggerBehavior EventName="CurrentStateChanged">
+                        <ic:InvokeCommandAction Command="{x:Bind ViewModel.StateChangedCommand}"/>
+                    </ic:EventTriggerBehavior>
+                </i:Interaction.Behaviors>
                 <VisualState x:Name="WideState">
                     <VisualState.StateTriggers>
                         <AdaptiveTrigger MinWindowWidth="640"/>
@@ -176,4 +174,3 @@
         </VisualStateManager.VisualStateGroups>
     </Grid>
 </Page>
-
