--- a/Airport.WebApi/ClientLight/Views/ShellPage.xaml
+++ b/Airport.WebApi/ClientLight/Views/ShellPage.xaml
@@ -1,18 +1,16 @@
-﻿<Page
+<Page
     x:Class="ClientLight.Views.ShellPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"    
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    DataContext="{Binding Shell, Source={StaticResource Locator}}"
+    DataContext="{Binding ShellViewModel, Source={StaticResource Locator}}"
+    xmlns:vm="using:ClientLight.ViewModel"
     xmlns:ic="using:Microsoft.Xaml.Interactions.Core"
     xmlns:i="using:Microsoft.Xaml.Interactivity"
-    xmlns:viewModel="using:ClientLight.ViewModel"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+    mc:Ignorable="d">
     <Page.Resources>
-        <DataTemplate x:Key="NavigationMenuItemDataTemplate" x:DataType="viewModel:ShellNavigationItem">
+        <DataTemplate x:Key="NavigationMenuItemDataTemplate" x:DataType="vm:ShellNavigationItem">
             <Button
                 Margin="0"
                 Padding="0,9"
@@ -63,9 +61,9 @@
         <SplitView
             x:Name="NavigationMenu"
             Grid.RowSpan="2"
-            DisplayMode="{Binding DisplayMode, Mode=OneWay}"
+            DisplayMode="{x:Bind ViewModel.DisplayMode, Mode=OneWay}"
             PaneBackground="{ThemeResource SystemControlBackgroundAltHighBrush}"
-            IsPaneOpen="{Binding IsPaneOpen, Mode=TwoWay}">
+            IsPaneOpen="{x:Bind ViewModel.IsPaneOpen, Mode=TwoWay}">
             <SplitView.Pane>
                 <Grid Margin="0,48,0,0">
                     <ScrollViewer VerticalAlignment="Stretch" TabNavigation="Local">
@@ -78,13 +76,13 @@
                                 VerticalAlignment="Top"
                                 IsTabStop="False"
                                 ItemTemplate="{StaticResource NavigationMenuItemDataTemplate}"
-                                ItemsSource="{Binding PrimaryItems}" />
+                                ItemsSource="{x:Bind ViewModel.PrimaryItems}" />
                             <ItemsControl
                                 Grid.Row="1"
                                 VerticalAlignment="Bottom"
                                 IsTabStop="False"
                                 ItemTemplate="{StaticResource NavigationMenuItemDataTemplate}"
-                                ItemsSource="{Binding SecondaryItems}" />
+                                ItemsSource="{x:Bind ViewModel.SecondaryItems}" />
                         </Grid>
                     </ScrollViewer>
                 </Grid>
@@ -95,7 +93,7 @@
             </Grid>
         </SplitView>
         <!--  Mavigation menu button  -->
-        <Button Width="48" Height="48" BorderThickness="0" Background="Transparent" Command="{Binding OpenPaneCommand}">
+        <Button Width="48" Height="48" BorderThickness="0" Background="Transparent" Command="{x:Bind ViewModel.OpenPaneCommand}">
             <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE700;" FontSize="16"/>
         </Button>
 
@@ -104,7 +102,7 @@
             <VisualStateGroup x:Name="WindowStates">
                 <i:Interaction.Behaviors>
                     <ic:EventTriggerBehavior EventName="CurrentStateChanged">
-                        <ic:InvokeCommandAction Command="{Binding StateChangedCommand}"/>
+                        <ic:InvokeCommandAction Command="{x:Bind ViewModel.StateChangedCommand}"/>
                     </ic:EventTriggerBehavior>
                 </i:Interaction.Behaviors>
                 <VisualState x:Name="PanoramicState">
