--- a/Airport.WebApi/ClientLight/Views/TicketsPage.xaml
+++ b/Airport.WebApi/ClientLight/Views/TicketsPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="ClientLight.Views.PilotsPage"
+    x:Class="ClientLight.Views.TicketsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,7 +8,7 @@
     xmlns:views="using:ClientLight.Views"
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:core="using:Microsoft.Xaml.Interactions.Core"
-    DataContext="{Binding PilotsViewModel, Source={StaticResource Locator}}"
+    DataContext="{Binding TicketsViewModel, Source={StaticResource Locator}}"
     mc:Ignorable="d">
 
     <Page.Transitions>
