Added stewardesses, departures crud support

--- a/Airport.WebApi/ClientLight/Views/DeparturesPage.xaml
+++ b/Airport.WebApi/ClientLight/Views/DeparturesPage.xaml
@@ -1,6 +1,6 @@
 ﻿<Page
-    x:Class="ClientLight.Views.TicketsPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    x:Class="ClientLight.Views.DeparturesPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -8,7 +8,8 @@
     xmlns:views="using:ClientLight.Views"
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:core="using:Microsoft.Xaml.Interactions.Core"
-    DataContext="{Binding TicketsViewModel, Source={StaticResource Locator}}"
+    xmlns:converters="using:ClientLight.Converters"
+    DataContext="{Binding DeparturesViewModel, Source={StaticResource Locator}}"
     mc:Ignorable="d">
 
     <Page.Transitions>
@@ -17,26 +18,42 @@
         </TransitionCollection>
     </Page.Transitions>
     <Page.Resources>
-        <DataTemplate x:Key="MasterListViewItemTemplate" x:DataType="model:TicketDto">
+        <DataTemplate x:Key="MasterListViewItemTemplate" x:DataType="model:DepartureDto">
             <Grid Margin="12,12,12,12">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width= "Auto" />
+                    <ColumnDefinition Width ="Auto" />
+                </Grid.ColumnDefinitions>
+
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
                 <TextBlock 
-                    Text="{x:Bind Id}"
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    Text="{x:Bind Id}" 
                     FontSize="16" FontWeight="SemiBold" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
+
+                <TextBlock 
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    Text="{x:Bind Flight.Number}" 
+                    FontSize="16" FontWeight="SemiBold" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
+
                 <TextBlock
                     Grid.Row="1"
+                    Grid.Column="0"
+
                     Opacity="0.6"
-                    Text="{x:Bind Price}"
+                    Text="{x:Bind DepartureTime}"
                     FontSize="16" FontWeight="Normal" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
             </Grid>
         </DataTemplate>
+        <converters:DateTimeConverter x:Key="DateTimeConverter" />
     </Page.Resources>
 
-    <Grid
-        x:Name="ContentArea"
+    <Grid x:Name="ContentArea"
         Padding="12,0,12,0">
 
         <Grid.RowDefinitions>
@@ -45,7 +62,7 @@
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition x:Name="MasterColumn" Width="300" />
+            <ColumnDefinition x:Name="MasterColumn" Width="296" />
             <ColumnDefinition x:Name="DetailColumn" Width="*" />
         </Grid.ColumnDefinitions>
 
@@ -75,7 +92,7 @@
             <!--The SystemControlPageBackgroundChromeLowBrush background represents where you should place your master content.-->
             <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="0,4">
                 <Button Width="48" Height="48" BorderThickness="0" Background="Transparent" 
-                        Command="{Binding AddTicketCommand}">
+                        Command="{Binding AddEntityCommand}">
                     <Grid>
                         <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE77b;" FontSize="16"/>
                         <Grid Background="White" Margin="16,16,0,0" Width="8" Height="8">
@@ -84,7 +101,7 @@
                     </Grid>
                 </Button>
                 <Button Width="48" Height="48" BorderThickness="0" Background="Transparent" 
-                        Command="{Binding DeleteTicketCommand}">
+                        Command="{Binding DeleteEntityCommand}">
                     <Grid>
                         <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE77b;" FontSize="16"/>
                         <Grid Background="White" Margin="16,16,0,0" Width="8" Height="8">
@@ -93,7 +110,7 @@
                     </Grid>
                 </Button>
                 <Button Width="48" Height="48" BorderThickness="0" Background="Transparent" 
-                        Command="{Binding UpdateTicketCommand}">
+                        Command="{Binding UpdateEntityCommand}">
                     <Grid>
                         <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE77b;" FontSize="16"/>
                         <Grid Background="White" Margin="16,16,0,0" Width="8" Height="8">
@@ -105,7 +122,7 @@
             <ListView
                 x:Name="MasterListView"
                 Grid.Row="2"
-                ItemsSource="{Binding Tickets, Mode=TwoWay}"
+                ItemsSource="{Binding Entities, Mode=OneWay}"
                 SelectedItem="{Binding Selected, Mode=TwoWay}"
                 ItemContainerTransitions="{x:Null}"
                 ItemTemplate="{StaticResource MasterListViewItemTemplate}"
@@ -158,69 +175,72 @@
                             <RowDefinition Height="40"/>
                             <RowDefinition Height="40"/>
                             <RowDefinition Height="40"/>
-
+                            <RowDefinition Height="40"/>
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
                         <TextBlock Text="Id" VerticalAlignment="Center" Margin="10,0" Grid.Row="0" Grid.Column="0"/>
-                        <TextBlock Text="Price $" VerticalAlignment="Center" Margin="10,0" Grid.Row="1" Grid.Column="0"/>
-                        <TextBlock Text="Flight Number" VerticalAlignment="Center" Margin="10,0" Grid.Row="2" Grid.Column="0"/>
+                        <TextBlock Text="Flight.Number" VerticalAlignment="Center" Margin="10,0" Grid.Row="1" Grid.Column="0"/>
+                        <TextBlock Text="Crew Id" VerticalAlignment="Center" Margin="10,0" Grid.Row="2" Grid.Column="0"/>
+                        <TextBlock Text="Departure Time" VerticalAlignment="Center" Margin="10,0" Grid.Row="3" Grid.Column="0"/>
+                        <TextBlock Text="Plane Id" VerticalAlignment="Center" Margin="10,0" Grid.Row="4" Grid.Column="0"/>
+
                         <TextBlock Text="{Binding Selected.Id, Mode=OneWay}" 
                          VerticalAlignment="Center" Margin="10,5" Grid.Row="0" Grid.Column="1"/>
-                        <TextBox Text="{Binding Selected.Price, Mode=TwoWay}"
+                        <TextBox Text="{Binding Selected.Flight.Number, Mode=TwoWay}" 
                          VerticalAlignment="Center" Margin="10,5" Grid.Row="1" Grid.Column="1"/>
-                        <TextBox Text="{Binding Selected.Flight.Number, Mode=TwoWay}"
+                        <TextBox Text="{Binding Selected.CrewId, Mode=TwoWay}" 
                          VerticalAlignment="Center" Margin="10,5" Grid.Row="2" Grid.Column="1"/>
-
+                        <CalendarDatePicker Date="{Binding Selected.DepartureTime, Mode=TwoWay, Converter={StaticResource DateTimeConverter}}"
+                                    VerticalAlignment="Center" Margin="10,5"
+                                    Grid.Row="3" Grid.Column="1"></CalendarDatePicker>
+                        <TextBox Text="{Binding Selected.Plane.Id, Mode=TwoWay}" 
+                                 VerticalAlignment="Center" Margin="10,5" Grid.Row="4" Grid.Column="1"/>
                     </Grid>
                 </ScrollViewer>
+
             </Grid>
 
-            <!--<views:TicketDetailControl
-                x:Name="DetailControl"
-                MasterMenuItem="{Binding Selected, Mode=OneWay}"/>-->
+            <!--  Adaptive triggers  -->
+            <VisualStateManager.VisualStateGroups>
+                <VisualStateGroup x:Name="WindowStates">
+                    <interactivity:Interaction.Behaviors>
+                        <core:EventTriggerBehavior EventName="CurrentStateChanged">
+                            <core:InvokeCommandAction Command="{Binding StateChangedCommand}"/>
+                        </core:EventTriggerBehavior>
+                    </interactivity:Interaction.Behaviors>
+                    <VisualState x:Name="WideState">
+                        <VisualState.StateTriggers>
+                            <AdaptiveTrigger MinWindowWidth="640"/>
+                        </VisualState.StateTriggers>
+                        <VisualState.Setters>
+                            <Setter Target="ContentArea.Padding" Value="12,0,12,0"/>
+                            <Setter Target="MasterColumn.Width" Value="296" />
+                        </VisualState.Setters>
+                    </VisualState>
+                    <VisualState x:Name="NarrowState">
+                        <VisualState.StateTriggers>
+                            <AdaptiveTrigger MinWindowWidth="0" />
+                            <AdaptiveTrigger MinWindowWidth="0"/>
+                        </VisualState.StateTriggers>
+                        <VisualState.Setters>
+                            <Setter Target="TitlePage.Margin" Value="48,0,12,7"/>
+                            <Setter Target="TitleRow.Height" Value="48"/>
+                            <Setter Target="MasterRow.Height" Value="Auto"/>
+                            <Setter Target="TitlePage.Visibility" Value="Visible"/>
+                            <Setter Target="Title.Visibility" Value="Collapsed"/>
+                            <Setter Target="ContentArea.Padding" Value="12,0,12,0"/>
+                            <Setter Target="MasterColumn.Width" Value="*" />
+                            <Setter Target="DetailColumn.Width" Value="0" />
+                            <Setter Target="MasterListView.SelectionMode" Value="None" />
+                            <Setter Target="MasterArea.Background" Value="{ThemeResource SystemControlBackgroundAltHighBrush}"/>
+                            <Setter Target="MasterListView.Margin" Value="-12,0"/>
+                        </VisualState.Setters>
+                    </VisualState>
+                </VisualStateGroup>
+            </VisualStateManager.VisualStateGroups>
         </Grid>
-
-        <!--  Adaptive triggers  -->
-        <VisualStateManager.VisualStateGroups>
-            <VisualStateGroup x:Name="WindowStates">
-                <interactivity:Interaction.Behaviors>
-                    <core:EventTriggerBehavior EventName="CurrentStateChanged">
-                        <core:InvokeCommandAction Command="{Binding StateChangedCommand}"/>
-                    </core:EventTriggerBehavior>
-                </interactivity:Interaction.Behaviors>
-                <VisualState x:Name="WideState">
-                    <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="640"/>
-                    </VisualState.StateTriggers>
-                    <VisualState.Setters>
-                        <Setter Target="ContentArea.Padding" Value="12,0,12,0"/>
-                        <Setter Target="MasterColumn.Width" Value="296" />
-                    </VisualState.Setters>
-                </VisualState>
-                <VisualState x:Name="NarrowState">
-                    <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="0" />
-                        <AdaptiveTrigger MinWindowWidth="0"/>
-                    </VisualState.StateTriggers>
-                    <VisualState.Setters>
-                        <Setter Target="TitlePage.Margin" Value="48,0,12,7"/>
-                        <Setter Target="TitleRow.Height" Value="48"/>
-                        <Setter Target="MasterRow.Height" Value="Auto"/>
-                        <Setter Target="TitlePage.Visibility" Value="Visible"/>
-                        <Setter Target="Title.Visibility" Value="Collapsed"/>
-                        <Setter Target="ContentArea.Padding" Value="12,0,12,0"/>
-                        <Setter Target="MasterColumn.Width" Value="*" />
-                        <Setter Target="DetailColumn.Width" Value="0" />
-                        <Setter Target="MasterListView.SelectionMode" Value="None" />
-                        <Setter Target="MasterArea.Background" Value="{ThemeResource SystemControlBackgroundAltHighBrush}"/>
-                        <Setter Target="MasterListView.Margin" Value="-12,0"/>
-                    </VisualState.Setters>
-                </VisualState>
-            </VisualStateGroup>
-        </VisualStateManager.VisualStateGroups>
     </Grid>
 </Page>
-
