--- a/Airport.WebApi/ClientLight/Views/StewardessesPage.xaml
+++ b/Airport.WebApi/ClientLight/Views/StewardessesPage.xaml
@@ -1,6 +1,6 @@
 ﻿<Page
-    x:Class="ClientLight.Views.TicketsPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    x:Class="ClientLight.Views.StewardessesPage"
+   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -8,7 +8,8 @@
     xmlns:views="using:ClientLight.Views"
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:core="using:Microsoft.Xaml.Interactions.Core"
-    DataContext="{Binding TicketsViewModel, Source={StaticResource Locator}}"
+    xmlns:converters="using:ClientLight.Converters"
+    DataContext="{Binding StewardessesViewModel, Source={StaticResource Locator}}"
     mc:Ignorable="d">
 
     <Page.Transitions>
@@ -17,22 +18,23 @@
         </TransitionCollection>
     </Page.Transitions>
     <Page.Resources>
-        <DataTemplate x:Key="MasterListViewItemTemplate" x:DataType="model:TicketDto">
+        <DataTemplate x:Key="MasterListViewItemTemplate" x:DataType="model:StewardessDto">
             <Grid Margin="12,12,12,12">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
                 <TextBlock 
-                    Text="{x:Bind Id}"
+                    Text="{x:Bind Name}" 
                     FontSize="16" FontWeight="SemiBold" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
                 <TextBlock
                     Grid.Row="1"
                     Opacity="0.6"
-                    Text="{x:Bind Price}"
+                    Text="{x:Bind FamilyName}"
                     FontSize="16" FontWeight="Normal" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
             </Grid>
         </DataTemplate>
+        <converters:DateTimeConverter x:Key="DateTimeConverter" />
     </Page.Resources>
 
     <Grid
@@ -45,7 +47,7 @@
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition x:Name="MasterColumn" Width="300" />
+            <ColumnDefinition x:Name="MasterColumn" Width="400" />
             <ColumnDefinition x:Name="DetailColumn" Width="*" />
         </Grid.ColumnDefinitions>
 
@@ -75,7 +77,7 @@
             <!--The SystemControlPageBackgroundChromeLowBrush background represents where you should place your master content.-->
             <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="0,4">
                 <Button Width="48" Height="48" BorderThickness="0" Background="Transparent" 
-                        Command="{Binding AddTicketCommand}">
+                        Command="{Binding AddStewardessCommand}">
                     <Grid>
                         <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE77b;" FontSize="16"/>
                         <Grid Background="White" Margin="16,16,0,0" Width="8" Height="8">
@@ -84,7 +86,7 @@
                     </Grid>
                 </Button>
                 <Button Width="48" Height="48" BorderThickness="0" Background="Transparent" 
-                        Command="{Binding DeleteTicketCommand}">
+                        Command="{Binding DeleteStewardessCommand}">
                     <Grid>
                         <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE77b;" FontSize="16"/>
                         <Grid Background="White" Margin="16,16,0,0" Width="8" Height="8">
@@ -93,7 +95,7 @@
                     </Grid>
                 </Button>
                 <Button Width="48" Height="48" BorderThickness="0" Background="Transparent" 
-                        Command="{Binding UpdateTicketCommand}">
+                        Command="{Binding UpdateStewardessCommand}">
                     <Grid>
                         <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE77b;" FontSize="16"/>
                         <Grid Background="White" Margin="16,16,0,0" Width="8" Height="8">
@@ -105,7 +107,7 @@
             <ListView
                 x:Name="MasterListView"
                 Grid.Row="2"
-                ItemsSource="{Binding Tickets, Mode=TwoWay}"
+                ItemsSource="{Binding Stewardesses, Mode=OneWay}"
                 SelectedItem="{Binding Selected, Mode=TwoWay}"
                 ItemContainerTransitions="{x:Null}"
                 ItemTemplate="{StaticResource MasterListViewItemTemplate}"
@@ -139,12 +141,13 @@
 
                 <TextBlock
             x:Name="TitlePage2"
-            Text="{Binding Selected.Id, Mode=OneWay}"
+            Text="{Binding Selected.Name, Mode=OneWay}"
             FontSize="28" FontWeight="SemiLight" TextTrimming="CharacterEllipsis" 
             TextWrapping="NoWrap" VerticalAlignment="Center"
             Margin="0,0,12,7"/>
 
-                <ScrollViewer Grid.Row="1"
+                <ScrollViewer
+            Grid.Row="1"
             ScrollViewer.HorizontalScrollBarVisibility="Disabled"
             ScrollViewer.VerticalScrollBarVisibility="Auto"
             ScrollViewer.VerticalScrollMode="Auto">
@@ -158,69 +161,71 @@
                             <RowDefinition Height="40"/>
                             <RowDefinition Height="40"/>
                             <RowDefinition Height="40"/>
-
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
                         <TextBlock Text="Id" VerticalAlignment="Center" Margin="10,0" Grid.Row="0" Grid.Column="0"/>
-                        <TextBlock Text="Price $" VerticalAlignment="Center" Margin="10,0" Grid.Row="1" Grid.Column="0"/>
-                        <TextBlock Text="Flight Number" VerticalAlignment="Center" Margin="10,0" Grid.Row="2" Grid.Column="0"/>
+                        <TextBlock Text="Name" VerticalAlignment="Center" Margin="10,0" Grid.Row="1" Grid.Column="0"/>
+                        <TextBlock Text="Family Name" VerticalAlignment="Center" Margin="10,0" Grid.Row="2" Grid.Column="0"/>
+                        <TextBlock Text="Date Of Birth" VerticalAlignment="Center" Margin="10,0" Grid.Row="3" Grid.Column="0"/>
                         <TextBlock Text="{Binding Selected.Id, Mode=OneWay}" 
                          VerticalAlignment="Center" Margin="10,5" Grid.Row="0" Grid.Column="1"/>
-                        <TextBox Text="{Binding Selected.Price, Mode=TwoWay}"
+                        <TextBox Text="{Binding Selected.Name, Mode=TwoWay}" 
                          VerticalAlignment="Center" Margin="10,5" Grid.Row="1" Grid.Column="1"/>
-                        <TextBox Text="{Binding Selected.Flight.Number, Mode=TwoWay}"
+                        <TextBox Text="{Binding Selected.FamilyName, Mode=TwoWay}" 
                          VerticalAlignment="Center" Margin="10,5" Grid.Row="2" Grid.Column="1"/>
-
+                        <CalendarDatePicker Date="{Binding Selected.DateOfBirth, Mode=TwoWay, Converter={StaticResource DateTimeConverter}}"
+                                    VerticalAlignment="Center" Margin="10,5"
+                                    Grid.Row="3" Grid.Column="1"></CalendarDatePicker>
                     </Grid>
                 </ScrollViewer>
-            </Grid>
 
-            <!--<views:TicketDetailControl
+                <!--<views:PilotDetailControl
                 x:Name="DetailControl"
                 MasterMenuItem="{Binding Selected, Mode=OneWay}"/>-->
-        </Grid>
+            </Grid>
 
-        <!--  Adaptive triggers  -->
-        <VisualStateManager.VisualStateGroups>
-            <VisualStateGroup x:Name="WindowStates">
-                <interactivity:Interaction.Behaviors>
-                    <core:EventTriggerBehavior EventName="CurrentStateChanged">
-                        <core:InvokeCommandAction Command="{Binding StateChangedCommand}"/>
-                    </core:EventTriggerBehavior>
-                </interactivity:Interaction.Behaviors>
-                <VisualState x:Name="WideState">
-                    <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="640"/>
-                    </VisualState.StateTriggers>
-                    <VisualState.Setters>
-                        <Setter Target="ContentArea.Padding" Value="12,0,12,0"/>
-                        <Setter Target="MasterColumn.Width" Value="296" />
-                    </VisualState.Setters>
-                </VisualState>
-                <VisualState x:Name="NarrowState">
-                    <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="0" />
-                        <AdaptiveTrigger MinWindowWidth="0"/>
-                    </VisualState.StateTriggers>
-                    <VisualState.Setters>
-                        <Setter Target="TitlePage.Margin" Value="48,0,12,7"/>
-                        <Setter Target="TitleRow.Height" Value="48"/>
-                        <Setter Target="MasterRow.Height" Value="Auto"/>
-                        <Setter Target="TitlePage.Visibility" Value="Visible"/>
-                        <Setter Target="Title.Visibility" Value="Collapsed"/>
-                        <Setter Target="ContentArea.Padding" Value="12,0,12,0"/>
-                        <Setter Target="MasterColumn.Width" Value="*" />
-                        <Setter Target="DetailColumn.Width" Value="0" />
-                        <Setter Target="MasterListView.SelectionMode" Value="None" />
-                        <Setter Target="MasterArea.Background" Value="{ThemeResource SystemControlBackgroundAltHighBrush}"/>
-                        <Setter Target="MasterListView.Margin" Value="-12,0"/>
-                    </VisualState.Setters>
-                </VisualState>
-            </VisualStateGroup>
-        </VisualStateManager.VisualStateGroups>
+            <!--  Adaptive triggers  -->
+            <VisualStateManager.VisualStateGroups>
+                <VisualStateGroup x:Name="WindowStates">
+                    <interactivity:Interaction.Behaviors>
+                        <core:EventTriggerBehavior EventName="CurrentStateChanged">
+                            <core:InvokeCommandAction Command="{Binding StateChangedCommand}"/>
+                        </core:EventTriggerBehavior>
+                    </interactivity:Interaction.Behaviors>
+                    <VisualState x:Name="WideState">
+                        <VisualState.StateTriggers>
+                            <AdaptiveTrigger MinWindowWidth="640"/>
+                        </VisualState.StateTriggers>
+                        <VisualState.Setters>
+                            <Setter Target="ContentArea.Padding" Value="12,0,12,0"/>
+                            <Setter Target="MasterColumn.Width" Value="296" />
+                        </VisualState.Setters>
+                    </VisualState>
+                    <VisualState x:Name="NarrowState">
+                        <VisualState.StateTriggers>
+                            <AdaptiveTrigger MinWindowWidth="0" />
+                            <AdaptiveTrigger MinWindowWidth="0"/>
+                        </VisualState.StateTriggers>
+                        <VisualState.Setters>
+                            <Setter Target="TitlePage.Margin" Value="48,0,12,7"/>
+                            <Setter Target="TitleRow.Height" Value="48"/>
+                            <Setter Target="MasterRow.Height" Value="Auto"/>
+                            <Setter Target="TitlePage.Visibility" Value="Visible"/>
+                            <Setter Target="Title.Visibility" Value="Collapsed"/>
+                            <Setter Target="ContentArea.Padding" Value="12,0,12,0"/>
+                            <Setter Target="MasterColumn.Width" Value="*" />
+                            <Setter Target="DetailColumn.Width" Value="0" />
+                            <Setter Target="MasterListView.SelectionMode" Value="None" />
+                            <Setter Target="MasterArea.Background" Value="{ThemeResource SystemControlBackgroundAltHighBrush}"/>
+                            <Setter Target="MasterListView.Margin" Value="-12,0"/>
+                        </VisualState.Setters>
+                    </VisualState>
+                </VisualStateGroup>
+            </VisualStateManager.VisualStateGroups>
+        </Grid>
     </Grid>
 </Page>
 
