--- a/Airport.WebApi/ClientLight/Views/StewardessesPage.xaml
+++ b/Airport.WebApi/ClientLight/Views/StewardessesPage.xaml
@@ -20,18 +20,38 @@
     <Page.Resources>
         <DataTemplate x:Key="MasterListViewItemTemplate" x:DataType="model:StewardessDto">
             <Grid Margin="12,12,12,12">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
                 <TextBlock 
+                    Grid.Row="0"
+                    Grid.Column="0"
                     Text="{x:Bind Name}" 
+                    TextAlignment="End"
+                    Padding="0, 0, 20, 0"
                     FontSize="16" FontWeight="SemiBold" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
                 <TextBlock
-                    Grid.Row="1"
-                    Opacity="0.6"
+                    Grid.Row="0"
+                    Grid.Column="1"
                     Text="{x:Bind FamilyName}"
-                    FontSize="16" FontWeight="Normal" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
+                    FontSize="16" FontWeight="SemiBold" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
+                <TextBlock 
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    Opacity="0.6"
+                    Text="Date of birth:" 
+                    FontSize="12" FontWeight="Normal" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
+                <TextBlock 
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    Opacity="0.6"
+                    Text="{x:Bind DateOfBirth}" 
+                    FontSize="12" FontWeight="Normal" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
             </Grid>
         </DataTemplate>
         <converters:DateTimeConverter x:Key="DateTimeConverter" />
@@ -47,7 +67,7 @@
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition x:Name="MasterColumn" Width="400" />
+            <ColumnDefinition x:Name="MasterColumn" Width="300" />
             <ColumnDefinition x:Name="DetailColumn" Width="*" />
         </Grid.ColumnDefinitions>
 
@@ -77,7 +97,7 @@
             <!--The SystemControlPageBackgroundChromeLowBrush background represents where you should place your master content.-->
             <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="0,4">
                 <Button Width="48" Height="48" BorderThickness="0" Background="Transparent" 
-                        Command="{Binding AddStewardessCommand}">
+                        Command="{Binding AddEntityCommand}">
                     <Grid>
                         <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE77b;" FontSize="16"/>
                         <Grid Background="White" Margin="16,16,0,0" Width="8" Height="8">
@@ -86,7 +106,7 @@
                     </Grid>
                 </Button>
                 <Button Width="48" Height="48" BorderThickness="0" Background="Transparent" 
-                        Command="{Binding DeleteStewardessCommand}">
+                        Command="{Binding DeleteEntityCommand}">
                     <Grid>
                         <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE77b;" FontSize="16"/>
                         <Grid Background="White" Margin="16,16,0,0" Width="8" Height="8">
@@ -95,7 +115,7 @@
                     </Grid>
                 </Button>
                 <Button Width="48" Height="48" BorderThickness="0" Background="Transparent" 
-                        Command="{Binding UpdateStewardessCommand}">
+                        Command="{Binding UpdateEntityCommand}">
                     <Grid>
                         <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE77b;" FontSize="16"/>
                         <Grid Background="White" Margin="16,16,0,0" Width="8" Height="8">
@@ -107,7 +127,7 @@
             <ListView
                 x:Name="MasterListView"
                 Grid.Row="2"
-                ItemsSource="{Binding Stewardesses, Mode=OneWay}"
+                ItemsSource="{Binding Entities, Mode=OneWay}"
                 SelectedItem="{Binding Selected, Mode=TwoWay}"
                 ItemContainerTransitions="{x:Null}"
                 ItemTemplate="{StaticResource MasterListViewItemTemplate}"
