--- a/Airport.WebApi/ClientLight/Views/FlightsPage.xaml
+++ b/Airport.WebApi/ClientLight/Views/FlightsPage.xaml
@@ -44,16 +44,17 @@
                 <TextBlock 
                     Grid.Row="1"
                     Grid.Column="0"
+                    Opacity="0.6"
                     Text="Departure Time:" 
-                    FontSize="16" FontWeight="SemiBold" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
+                    FontSize="14" FontWeight="SemiBold" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
 
                 <TextBlock
                     Grid.Row="1"
                     Grid.Column="1"
-
                     Opacity="0.6"
+                    HorizontalAlignment="Right"
                     Text="{x:Bind DepartureTime}"
-                    FontSize="16" FontWeight="Normal" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
+                    FontSize="14" FontWeight="Normal" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
             </Grid>
         </DataTemplate>
         <converters:DateTimeConverter x:Key="DateTimeConverter" />
@@ -68,7 +69,7 @@
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition x:Name="MasterColumn" Width="400" />
+            <ColumnDefinition x:Name="MasterColumn" Width="350" />
             <ColumnDefinition x:Name="DetailColumn" Width="*" />
         </Grid.ColumnDefinitions>
 
@@ -155,19 +156,36 @@
             Padding="24,0,0,0">
 
             <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="48"/>
+                    <RowDefinition Height="50"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
                 <TextBlock
+                    Grid.Row="0" 
+                    Grid.Column="0"
+                    Text="Flight #"
+                    FontSize="28" FontWeight="SemiLight" TextTrimming="CharacterEllipsis" 
+                    TextWrapping="NoWrap" VerticalAlignment="Center"
+                    Margin="0,0,12,7"/>
+
+                <TextBlock
+                    Grid.Row="0" 
+                    Grid.Column="1"
             x:Name="TitlePage2"
             Text="{Binding Selected.Id, Mode=OneWay}"
             FontSize="28" FontWeight="SemiLight" TextTrimming="CharacterEllipsis" 
             TextWrapping="NoWrap" VerticalAlignment="Center"
             Margin="0,0,12,7"/>
 
-                <ScrollViewer Grid.Row="1"
+                <ScrollViewer 
+                    Grid.Column="0"
+                    Grid.ColumnSpan="2"
+                    Grid.Row="1" 
             ScrollViewer.HorizontalScrollBarVisibility="Disabled"
             ScrollViewer.VerticalScrollBarVisibility="Auto"
             ScrollViewer.VerticalScrollMode="Auto">
