--- a/Airport.WebApi/ClientLight/Views/TicketsPage.xaml
+++ b/Airport.WebApi/ClientLight/Views/TicketsPage.xaml
@@ -19,18 +19,50 @@
     <Page.Resources>
         <DataTemplate x:Key="MasterListViewItemTemplate" x:DataType="model:TicketDto">
             <Grid Margin="12,12,12,12">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
                 <TextBlock 
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    Text="#" 
+                    FontSize="16" FontWeight="SemiBold" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
+                <TextBlock
+                    Grid.Row="0"
+                    Grid.Column="1"
                     Text="{x:Bind Id}"
+                    FontSize="16" FontWeight="SemiBold" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
+                <TextBlock 
+                    Grid.Row="0"
+                    Grid.Column="2"
+                    Text="Price $" 
+                    FontSize="16" FontWeight="Normal" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
+                <TextBlock 
+                    Grid.Row="0"
+                    Grid.Column="3"
+                    Text="{x:Bind Price}"
                     FontSize="16" FontWeight="SemiBold" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
                 <TextBlock
                     Grid.Row="1"
+                    Grid.Column="0"
+                    Grid.ColumnSpan="2"
                     Opacity="0.6"
-                    Text="{x:Bind Price}"
-                    FontSize="16" FontWeight="Normal" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
+                    Text="Flight #"
+                    FontSize="14" FontWeight="Normal" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
+                <TextBlock
+                    Grid.Row="1"
+                    Grid.Column="2"
+                    Grid.ColumnSpan="2"
+                    Opacity="0.6"
+                    Text="{x:Bind Flight.Number}"
+                    FontSize="14" FontWeight="Normal" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
             </Grid>
         </DataTemplate>
     </Page.Resources>
